--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="barra">
     <nav class="barraa">
     <ul>
-        <li><a href="#">Inicio</a></li>
+        <li><a href="https://isagr13.github.io/Contacto/">Inicio</a></li>
         <li><a href="#">Productos bellas artes</a></li>
         <li><a href="#">Productos de papeleria</a></li>
         <li><a href="#">Descuentos</a></li>
